--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
   <footer>
     <div>Copyright (c) <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" class="credit-link">税理士法人松本会計事務所</a> All Rights Reserved. / <span id="build-rev">r52</span></div>
     <div id="last-updated" style="margin-top:6px; font-size:13px; color:var(--muted);"></div>
-    
+    <a href="/tool-portal/terms.html" target="_blank" rel="license">利用条件</a>
+
   </footer>
 
 <script>
