--- a/terms.html
+++ b/terms.html
@@ -1,74 +1,53 @@
-<!doctype html>
-<html lang="ja">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>利用条件 | 松本会計ツールポータル</title>
-  <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";line-height:1.7;color:#222;margin:0}
-    header,main,footer{max-width:920px;margin:0 auto;padding:16px}
-    header{padding-top:24px}
-    h1{font-size:1.6rem;margin:.5em 0}
-    h2{font-size:1.2rem;margin:1.5em 0 .5em}
-    code,kbd{background:#f4f4f4;padding:.08em .3em;border-radius:4px}
-    footer{color:#666;font-size:.9rem;border-top:1px solid #eee;margin-top:24px}
-    a{color:#0b79d0}
-  </style>
-</head>
-<body>
-<header>
-  <h1>利用条件（松本会計ツールポータル）</h1>
-  <p>最終更新日：2025-10-05　/　版：r23</p>
-</header>
-<main>
-  <p>適用対象：本ポータル（以下「本サイト」）および本サイトから配布・リンクされる各種Webツール、ドキュメント、スライド、画像、ソースコード、テンプレート等（以下「本コンテンツ」）。<br>
-  権利者：税理士法人松本会計事務所（以下「当事務所」）。</p>
+<!DOCTYPE html><html lang="ja"><head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>利用条件｜松本会計ツールポータル</title>
+<style>
+  body{font-family:system-ui,-apple-system,"Noto Sans JP",sans-serif;line-height:1.7;margin:0;background:#f8fafc;color:#0f172a}
+  .wrap{max-width:860px;margin:24px auto;padding:0 16px}
+  h1{font-size:22px;margin:8px 0 12px}
+  h2{font-size:18px;margin:20px 0 8px}
+  p,li{font-size:14px;color:#334155}
+  ul{padding-left:1.2em}
+  .mk-mini{font-size:12px;line-height:1.4;color:#64748b;text-align:center;padding:10px 12px;border-top:1px solid #e2e8f0;margin-top:28px}
+  .mk-mini a{color:inherit;text-decoration:underline;text-underline-offset:2px}
+</style>
+</head><body>
+  <main class="wrap">
+    <h1>利用条件</h1>
 
-  <h2>1. ライセンス（CC BY-NC-SA 4.0）</h2>
-  <p>本コンテンツは、<strong>Creative Commons 表示–非営利–継承 4.0 国際（CC BY-NC-SA 4.0）</strong>で提供します。<br>
-  <strong>表示（BY）</strong>：使用時は「税理士法人松本会計事務所」のクレジットを明示してください。<br>
-  <strong>非営利（NC）</strong>：商用利用は不可です。<br>
-  <strong>継承（SA）</strong>：改変して公開する場合、同一ライセンス（CC BY-NC-SA 4.0）で公開してください。<br>
-  ライセンス要約：<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en" target="_blank" rel="license">CC BY-NC-SA 4.0 Deed</a> ／ 条文：<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode.en" target="_blank" rel="license">Legal code</a></p>
+    <h2>1. 適用範囲</h2>
+    <p>本利用条件は、本サイトおよび本サイトから配布・リンクされる各ツール・資料等（以下「本コンテンツ」）の利用に適用されます。</p>
 
-  <h2>2. クレジット表記（例）</h2>
-  <ul>
-    <li>そのまま利用：<br>「© 税理士法人松本会計事務所 — 本ツールは CC BY-NC-SA 4.0（非営利・要表示・継承）で提供」</li>
-    <li>改変して公開：<br>「原著作：税理士法人松本会計事務所／改変者：□□□。本作品は CC BY-NC-SA 4.0 に基づき公開」</li>
-  </ul>
+    <h2>2. ライセンス</h2>
+    <p>本コンテンツは <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener">CC BY-NC-SA 4.0</a> により提供されます。</p>
 
-  <h2>3. 禁止事項</h2>
-  <ul>
-    <li>商用利用（有償配布、販売、案件納品への直接組み込み等）。</li>
-    <li>ライセンスやクレジットの削除・不明瞭化。</li>
-    <li>誤用・不正確な運用により第三者に不利益を与える行為。</li>
-    <li>法令・公序良俗・各プラットフォーム規約に反する行為。</li>
-  </ul>
-  <p>※商用利用をご希望の場合は当事務所へご相談ください。</p>
+    <h2>3. 禁止事項</h2>
+    <ul>
+      <li>商用利用（別段の許諾がある場合を除く）</li>
+      <li>著作権表示・出典・ライセンス表記の削除または不明瞭化</li>
+      <li>法令違反、公序良俗に反する目的での利用</li>
+    </ul>
 
-  <h2>4. 免責事項</h2>
-  <p>本コンテンツは一般的情報提供を目的とし、税務・会計・法務等の専門的助言を構成しません。内容の正確性・完全性・最新性は保証いたしません。最終判断は利用者の責任で行ってください。当事務所は利用・不使用・利用不能に起因する一切の損害について責任を負いません。</p>
+    <h2>4. 免責</h2>
+    <p>本コンテンツは一般的な情報提供であり、正確性・完全性・最新性を保証しません。利用・不使用・利用不能に起因する損害について、当事務所は一切の責任を負いません。<br>
+    <strong>顧問契約を締結されているお客様については、当該契約書の定めが本利用条件に優先します。</strong></p>
 
-  <h2>5. 外部サービス・第三者コンテンツ</h2>
-  <p>外部サイトや第三者資料の内容・可用性・安全性について、当事務所は責任を負いません。</p>
+    <h2>5. 変更・停止</h2>
+    <p>当事務所は、本コンテンツの内容・提供方法・URL等を予告なく変更または停止することがあります。</p>
 
-  <h2>6. 知的財産</h2>
-  <p>特段の明示がない限り、著作権等は当事務所に帰属します。ロゴ・商標・事務所名は当事務所の標章であり、ライセンスに基づく表示目的の範囲を超えて使用できません。</p>
+    <h2>6. 準拠法・管轄</h2>
+    <p>本利用条件は日本法に準拠し、紛争は神戸地方裁判所を第一審の専属的合意管轄裁判所とします。</p>
+  </main>
 
-  <h2>7. 変更・提供停止</h2>
-  <p>当事務所は予告なく内容変更・提供停止・URL変更等を行うことがあります。</p>
+  <footer class="mk-mini">
+    © <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener">税理士法人松本会計事務所</a> ｜ 
+    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener">CC BY-NC-SA 4.0</a> ｜ 
+    <a href="https://takatrp.github.io/tool-portal/terms.html" target="_blank" rel="noopener">利用条件</a>
+  </footer>
 
-  <h2>8. 解析・トラッキング（UTM）</h2>
-  <p>普及状況の把握のため、配布URLに UTM パラメータ（例：<code>utm_source</code>/<code>utm_medium</code>/<code>utm_campaign</code>/<code>utm_content</code>）を付与する場合があります。</p>
-
-  <h2>9. 準拠法・管轄</h2>
-  <p>本利用条件は日本法に準拠します。紛争は神戸地方裁判所を第一審の専属的合意管轄とします（消費者契約法等による保護を除く）。</p>
-
-  <h2>10. お問い合わせ</h2>
-  <p>商用利用の個別許諾、改変公開時の表記、その他のご相談は本サイトの問い合わせ窓口よりご連絡ください。</p>
-</main>
-<footer>
-  © 税理士法人松本会計事務所｜本ページは CC BY-NC-SA 4.0（上記リンク参照）｜r23（2025-10-05）
-</footer>
-</body>
-</html>
+<script>
+  // 年のみ自動更新（版・日付は表示しない）
+  (function(){ const y=document.getElementById('cpy-year'); if(y) y.textContent=new Date().getFullYear(); })();
+</script>
+</body></html>
