--- a/terms.html
+++ b/terms.html
@@ -17,21 +17,21 @@
     <h1>利用条件</h1>
 
     <h2>1. 適用範囲</h2>
-    <p>本利用条件は、本サイトおよび本サイトから配布・リンクされる各ツール・資料等（以下「本コンテンツ」）の利用に適用されます。</p>
+    <p>本利用条件は、松本会計ツールポータルおよび松本会計ツールポータルから配布・リンクされる各ツール・資料等（以下「本コンテンツ」）の利用に適用されます。</p>
 
     <h2>2. ライセンス</h2>
     <p>本コンテンツは <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener">CC BY-NC-SA 4.0</a> により提供されます。</p>
 
     <h2>3. 禁止事項</h2>
     <ul>
-      <li>商用利用（別段の許諾がある場合を除く）</li>
+      <li>商用利用（商用利用をご希望の方は当事務所までご連絡ください）</li>
       <li>著作権表示・出典・ライセンス表記の削除または不明瞭化</li>
       <li>法令違反、公序良俗に反する目的での利用</li>
     </ul>
 
     <h2>4. 免責</h2>
     <p>本コンテンツは一般的な情報提供であり、正確性・完全性・最新性を保証しません。利用・不使用・利用不能に起因する損害について、当事務所は一切の責任を負いません。<br>
-    <strong>顧問契約を締結されているお客様については、当該契約書の定めが本利用条件に優先します。</strong></p>
+    <strong>当事務所と顧問契約を締結されているお客様については、当該契約書の定めが本利用条件に優先します。</strong></p>
 
     <h2>5. 変更・停止</h2>
     <p>当事務所は、本コンテンツの内容・提供方法・URL等を予告なく変更または停止することがあります。</p>
