--- a/index.html
+++ b/index.html
@@ -142,14 +142,16 @@
   @media (max-width:480px){ .mk-mini{ font-size:11px; } }
   /* PC: 4WD横並びの各タイトルを1行化（長文対策） */
   @media (min-width: 1024px){
-    #shitenno .grid .card h3,
-    #shitenno .grid .link-card h3,
-    #shitenno .grid a h3{
-      font-size:16px;           /* 既定18px→16px */
+    /* フレックス内で省略記号を効かせるため min-width:0 を指定 */
+    #shitenno .tiles4-row .tile .ttext{min-width:0;}
+    #shitenno .tiles4-row .tile .ttext .title{
+      font-size:16px;           /* 既定16pxを明示 */
       white-space:nowrap;       /* 折り返さない */
       overflow:hidden;          /* はみ出し防止 */
-      text-overflow:ellipsis;   /* 万一溢れたら省略 */
+      text-overflow:ellipsis;   /* 溢れた分は… */
+      display:block;
     }
+  }
   }
 </style>
 </head>
@@ -255,7 +257,7 @@
     © <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener license">税理士法人松本会計事務所</a> ｜
     <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener">CC BY-NC-SA 4.0</a> ｜
     <a href="/tool-portal/terms.html" target="_blank" rel="noopener">利用条件</a> ｜
-    <span id="build-rev">r54</span>（<span id="last-updated-date"></span>）
+    <span id="build-rev">r55</span>（<span id="last-updated-date"></span>）
   </footer>
 
 <script>
