--- a/index.html
+++ b/index.html
@@ -152,14 +152,13 @@
       display:block;
     }
   }
-  }
 </style>
 </head>
 <body>
   <header class="hero">
     <div class="topbar">
       <div class="branding">
-        <a class="logo" href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" aria-label="税理士法人松本会計事務所 公式サイト"><img src="./ロゴ.jpg" alt="松本会計ロゴ"></a>
+        <a class="logo" href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" aria-label="税理士法人松本会計事務所 公式サイト"><img src=\"./ロゴ.png\" alt="松本会計ロゴ"></a>
         <div>
           <div class="title">松本会計ツールポータル</div>
           <div class="subtitle">黒字経営を加速する、松本会計オリジナルツール集</div>
@@ -222,7 +221,7 @@
       </a>
       <a class="tile" href="https://takatrp.github.io/price-up-down/" target="_blank" rel="noopener">
         <div class="badge"><svg viewBox="0 0 24 24"><path d="M12 6v12"/><path d="M8 10l4-4 4 4"/><path d="M8 14l4 4 4-4"/></svg></div>
-        <div class="ttext"><div class="title">価格改定検討ツール</div><p class="desc">価格改定の売上・利益影響を試算</p></div>
+        <div class="ttext"><div class="title">価格改定検討ツール</div><p class="desc">価格改定の影響を試算</p></div>
       </a>
       <a class="tile" href="https://takatrp.github.io/time-unit-cost/" target="_blank" rel="noopener">
         <div class="badge">¥</div>
@@ -240,7 +239,7 @@
     <div class="tiles4">
       <a class="tile" href="https://takatrp.github.io/withholding/" target="_blank" rel="noopener">
         <div class="badge">%</div>
-        <div class="ttext"><div class="title">受取利息・配当金 仕訳補助</div><p class="desc">源泉徴収税額の見込みと仕訳補助のための簡易計算</p></div>
+        <div class="ttext"><div class="title">受取利息・配当金 仕訳補助</div><p class="desc">手取額から源泉徴収税額を逆算・仕訳を表示</p></div>
       </a>
       <a class="tile" href="https://takatrp.github.io/genkasyoukyaku/" target="_blank" rel="noopener">
         <div class="badge">Σ</div>
@@ -257,7 +256,7 @@
     © <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener license">税理士法人松本会計事務所</a> ｜
     <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener">CC BY-NC-SA 4.0</a> ｜
     <a href="/tool-portal/terms.html" target="_blank" rel="noopener">利用条件</a> ｜
-    <span id="build-rev">r55</span>（<span id="last-updated-date"></span>）
+    <span id="build-rev">r56</span>（<span id="last-updated-date"></span>）
   </footer>
 
 <script>
