--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-91JF4BT2QT'); // ←測定IDに置き換え
-</script>
-
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
 <title>松本会計ツールポータル</title>
@@ -247,29 +238,24 @@
     </div>
   </section>
 
-  <section id="others" class="section">
-    <h2>🧰 その他便利ツール</h2>
-    <div class="tiles4">
-      <a class="tile" href="https://takatrp.github.io/withholding/" target="_blank" rel="noopener">
-        <div class="badge">%</div>
-        <div class="ttext"><div class="title">受取利息・配当金 仕訳補助</div><p class="desc">手取額から源泉徴収税額を逆算・仕訳を表示</p></div>
-      </a>
-      <a class="tile" href="https://takatrp.github.io/genkasyoukyaku/" target="_blank" rel="noopener">
-        <div class="badge">Σ</div>
-        <div class="ttext"><div class="title">減価償却費計算ツール</div><p class="desc">定額法・定率法の償却費を即時計算</p></div>
-      </a>
-      <a class="tile" href="https://takatrp.github.io/kigyoubouei/" target="_blank" rel="noopener">
-        <div class="badge"><svg viewBox="0 0 24 24"><path d="M12 2l7 4v6c0 5-3 9-7 10-4-1-7-5-7-10V6l7-4z"/></svg></div>
-        <div class="ttext"><div class="title">標準保障額・保険料換算ツール</div><p class="desc">標準保障額と保険料を売上高に換算</p></div>
-      </a>
-    </div>
-  </section>
+  \1\2
+      <!-- 追加：CCC計算ツール（その他便利ツール末尾） -->
+      <div class="tile">
+        <a class="tlink" href="https://takatrp.github.io/CCC/" target="_blank" rel="noopener">
+          <div class="ticon">↻</div>
+          <div class="ttext">
+            <div class="title">CCC計算ツール</div>
+            <div class="desc">キャッシュコンバージョンサイクルを計算</div>
+          </div>
+        </a>
+      </div>
+    \3
 
   <footer class="mk-mini">
     © <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener license">税理士法人松本会計事務所</a> ｜
     <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener">CC BY-NC-SA 4.0</a> ｜
     <a href="/tool-portal/terms.html" target="_blank" rel="noopener">利用条件</a> ｜
-    <span id="build-rev">r57</span>（<span id="last-updated-date"></span>）
+    <span id="build-rev">r58</span>（<span id="last-updated-date"></span>）
   </footer>
 
 <script>
