--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <header class="hero">
     <div class="topbar">
       <div class="branding">
-        <a class="logo" href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" aria-label="税理士法人松本会計事務所 公式サイト"><img src=\"./ロゴ.png\" alt="松本会計ロゴ"></a>
+        <a class="logo" href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener" aria-label="税理士法人松本会計事務所 公式サイト"><img src="./ロゴ.jpg" onerror="this.onerror=null;this.src='./ロゴ.png'" alt="松本会計ロゴ"></a></a>
         <div>
           <div class="title">松本会計ツールポータル</div>
           <div class="subtitle">黒字経営を加速する、松本会計オリジナルツール集</div>
@@ -237,25 +237,11 @@
       </a>
     </div>
   </section>
-
-  \1\2
-      <!-- 追加：CCC計算ツール（その他便利ツール末尾） -->
-      <div class="tile">
-        <a class="tlink" href="https://takatrp.github.io/CCC/" target="_blank" rel="noopener">
-          <div class="ticon">↻</div>
-          <div class="ttext">
-            <div class="title">CCC計算ツール</div>
-            <div class="desc">キャッシュコンバージョンサイクルを計算</div>
-          </div>
-        </a>
-      </div>
-    \3
-
   <footer class="mk-mini">
     © <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener license">税理士法人松本会計事務所</a> ｜
     <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener">CC BY-NC-SA 4.0</a> ｜
     <a href="/tool-portal/terms.html" target="_blank" rel="noopener">利用条件</a> ｜
-    <span id="build-rev">r58</span>（<span id="last-updated-date"></span>）
+    <span id="build-rev">r60</span>（<span id="last-updated-date"></span>）
   </footer>
 
 <script>
