--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
   @media (max-width:480px){ .branding img{height:48px;} }
   @media (max-width:767px){ body{ background:#f7fafc; } }
 </style>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-91JF4BT2QT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);} 
+    gtag('js', new Date());
+    gtag('config', 'G-91JF4BT2QT');
+  </script>
 </head>
 <body>
   <header class="hero">
@@ -263,7 +272,7 @@
     © <span id="cpy-year">2025</span> <a href="https://www.matsumoto-kaikei.or.jp/" target="_blank" rel="noopener license">税理士法人松本会計事務所</a> ｜
     <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener">CC BY-NC-SA 4.0</a> ｜
     <a href="/tool-portal/terms.html" target="_blank" rel="noopener">利用条件</a> ｜
-    <span id="build-rev">r60</span>（<span id="last-updated-date"></span>）
+    <span id="build-rev">r61</span>（<span id="last-updated-date"></span>）
   </footer>
 
 <script>
